--- a/devops.html
+++ b/devops.html
@@ -46,7 +46,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/267792-devops-engineer-m-w-d'>Job @ Synedat Consulting (Munich): DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692278833-devops-software-engineer'>spruceinfotech DevOps Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Spruceinfotech2/743999692278833-devops-software-engineer'>spruceinfotech DevOps Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://artificialsolutions46581.recruiterbox.com/jobs/fk03fby'>
+<h5><a href='http://artificialsolutions46581.recruiterbox.com/jobs/fk03fby'>
     DevOps Engineer (Software Development) at Artificial Solutions
 </a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
@@ -159,7 +159,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -344,7 +344,7 @@ published: 08.03.2019). Apply now or check the other available jobs.</p>
 Engineer in Z?rich (published: 19.07.2019). Apply now or check the other 
 available?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
+<h5><a href='https://viva.workable.com/j/D3BD40666D?viewed=true'>DevOps Engineer - Apply online - Viva Wallet - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... As a DevOps Engineer your focus will be to collaborate with developer and 
 operations teams to maintain and evolve our platforms. More specifically, as a?...</p>
@@ -357,7 +357,7 @@ operations teams to maintain and evolve our platforms. More specifically, as a?.
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/17F7EFEAE8'>AirTree Ventures - Jobs: Thematic: DevOps and AWS Infrastructure ...</a></h5> 
+<h5><a href='https://www.workable.com/j/17F7EFEAE8'>AirTree Ventures - Jobs: Thematic: DevOps and AWS Infrastructure ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Alyona has a PhD in NLP and Machine Learning with an international reputation, 
 and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
@@ -367,7 +367,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p>5 days ago ... ... Fortune 1000 and Middle Market brands acquire, retain and grow customer 
 relationships through actionable data, advanced analytics and machine learning.</p>
 <hr/>
-<h5><a href='https://mitre.referrals.selectminds.com/jobs/devops-strategic-advisor-6482'>DevOps Strategic Advisor - MITRE Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mitre.referrals.selectminds.com/jobs/devops-strategic-advisor-6482'>DevOps Strategic Advisor - MITRE Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -412,7 +412,7 @@ relationships through actionable data, advanced analytics and machine learning.<
 <p>4 days ago ... Position Description: As a DevOps Engineer, you will play a key role developing 
 on the AWS platform, as well as crafting and implementing infrastructure as?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/98jLp3VY2X/Devops-Engineer'>Devops Engineer - Pitchup.com - Career Page</a></h5> 
+<h5><a href='http://pitchup.applytojob.com/apply/98jLp3VY2X/Devops-Engineer'>Devops Engineer - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
